assets/scss/_lr_bar: remove right margin to ensure corret alignment

--- a/meinberlin/assets/scss/components/_lr_bar.scss
+++ b/meinberlin/assets/scss/components/_lr_bar.scss
@@ -13,7 +13,7 @@
 
 .lr-bar__right {
     float: right;
-    margin: 0 5px;
+    margin: 0 0 0 5px;
 
     > * {
         display: inline-block;
